--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -18,7 +18,7 @@
                 <nav>
                   <ul id="navigation">
                     <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/course">Courses</a></li>
+                    <li><a href="/courses">Courses</a></li>
                     <li><a href="/exam">Exam</a></li>
 
                     <!-- Nếu chưa login -->
