--- a/src/main/resources/templates/client/layout/footer.html
+++ b/src/main/resources/templates/client/layout/footer.html
@@ -9,7 +9,7 @@
             <div class="single-footer-caption mb-30">
               <!-- Logo -->
               <div class="footer-logo mb-25">
-                <a href="index.html">
+                <a href="/">
                   <img src="/img/logo/logo2_footer.png" alt="Logo trang web" />
                 </a>
               </div>
@@ -94,7 +94,7 @@
                 </script>
                 Bảo lưu mọi quyền | trang này được tạo
                 <i class="fa fa-heart" aria-hidden="true"></i> bởi
-                <a href="https://colorlib.com" target="_blank">nhóm CNPM</a>
+                <a href="#" target="_blank">nhóm CNPM</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
