--- a/src/main/resources/templates/client/layout/subtitle.html
+++ b/src/main/resources/templates/client/layout/subtitle.html
@@ -16,7 +16,7 @@
                   tuyến từ các trường đại học và công ty đẳng cấp thế giới
                 </p>
                 <a
-                  href="/course"
+                  href="/courses"
                   class="btn hero-btn"
                   data-animation="fadeInLeft"
                   data-delay="0.7s"
