--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -45,6 +45,12 @@
               </div>
               Course
             </a>
+            <a class="nav-link" href="/admin/sold">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              course sold
+            </a>
           </div>
         </div>
       </div>
