--- a/src/main/resources/templates/admin/class/create.html
+++ b/src/main/resources/templates/admin/class/create.html
@@ -27,12 +27,12 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Tạo đề thi</h1>
+            <h1 class="mt-4">Tạo lớp học</h1>
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item">
                 <a th:href="@{/admin/class}">Class</a>
               </li>
-              <li class="breadcrumb-item active">Tạo đề thi</li>
+              <li class="breadcrumb-item active">Tạo lớp học</li>
             </ol>
 
             <div class="mt-4">
