--- a/src/main/resources/templates/admin/test/detail.html
+++ b/src/main/resources/templates/admin/test/detail.html
@@ -34,6 +34,18 @@
               </li>
               <li class="breadcrumb-item active">Điểm của kì thi</li>
             </ol>
+            <ol class="breadcrumb mb-4">
+              <li class="breadcrumb-item">
+                <a
+                  th:href="@{'/admin/test/' + ${id} + '/export'}"
+                  class="btn btn-success"
+                  target="_blank"
+                  download
+                >
+                  Xuất Excel
+                </a>
+              </li>
+            </ol>
 
             <div class="mt-4">
               <div class="row">
