--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -49,7 +49,13 @@
               <div class="sb-nav-link-icon">
                 <i class="fas fa-tachometer-alt"></i>
               </div>
-              course sold
+              Course Sold
+            </a>
+            <a class="nav-link" href="/admin/send-mail">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              Send Email
             </a>
           </div>
           <div sec:authorize="hasAnyRole('ADMIN')">
