--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -57,6 +57,12 @@
               </div>
               Send Email
             </a>
+            <a class="nav-link" href="/admin/email">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              receive email
+            </a>
           </div>
           <div sec:authorize="hasAnyRole('ADMIN')">
             <a
