--- a/src/main/resources/templates/client/auth/login.html
+++ b/src/main/resources/templates/client/auth/login.html
@@ -144,7 +144,7 @@
               </div>
 
               <div class="text-center text-lg-start mt-3 pt-2">
-                <button class="btn btn-primary btn-lg">Login</button>
+                <button class="btn btn-primary btn-lg">Đăng nhập</button>
               </div>
 
               <p class="small fw-bold mt-2 pt-1 mb-0">
