--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -86,7 +86,7 @@
                         <li>
                           <a
                             class="dropdown-item"
-                            href="/profile/edit"
+                            href="/purchased-course"
                             style="
                               width: 100%;
                               padding: 10px 20px;
@@ -95,7 +95,7 @@
                               background-color: #fff;
                             "
                           >
-                            Chỉnh sửa hồ sơ
+                            Khóa học đã mua
                           </a>
                         </li>
 
